-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
As of today eglfs is incapable of supporting multiple screens. It will always use fb0, which is not ideal since boards like the iMX6 are often used in a multi-display setup.
Both eglfs and the iMX6 hooks need to be enhanced. At minimum the framebuffer device/index has to be configurable, so that, similarly to linuxfb, the display to be used can be specified on the command-line. Once that's done, we need to consider discovering and exposing all of the available FBs as QPlatformScreens. This might introduce some unforeseen difficulties, though, and needs some investigation.
- is duplicated by
-
QTBUG-40434 Have support for an application displaying across multiple screens in eglfs for embedded devices
-
- Closed
-
For Gerrit Dashboard: QTBUG-36113 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
75233,3 | eglfs: Allow using a different framebuffer device | dev | qt/qtbase | Status: ABANDONED | +2 | 0 |
75696,1 | eglfs: Allow using a different framebuffer device | stable | qt/qtbase | Status: MERGED | +2 | 0 |